tests/snapshots/wallets/sweep_all_addresses/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - sweep-all-addresses
    - foo
    - 1DrDyTr9RpRsQnDnXo2YRiPzPW4ooHX5LLoqXrqfMrpQH
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: foo not found
